# vyloc-backend-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  locustfile.py  main.py  pyproject.toml  start_worker.sh
app/: __init__.py  main.py
app/core/: celery_app.py  config.py
app/models/: __init__.py  watermark_remover.py
app/routers/: __init__.py  batch.py  localization.py  payments.py  websocket.py
app/schemas/: __init__.py  localization.py
app/services/: batch_service.py  gemini_service.py  storage_service.py  supabase_service.py  watermark_service.py
app/tasks/: __init__.py  localization_tasks.py
app/utils/: prompts.py
